# depcalc

./: README.md  TODO.txt  compreq.sh  pyproject.toml  requirements.py  set_version.py
.github/workflows/: compreq.yml  test_release.yml
compreq/: __init__.py  bounds.py  classifiers.py  context.py  contexts.py  experiments.py  factory.py  lazy.py  levels.py  operators.py  paths.py  pypireleases.py  pythonftp.py  pythonreleases.py  release.py  releases.py  root.py  roots.py  time.py  versiontokens.py  virtualenv.py
compreq/io/: poetry.py  pyproject.py  re.py  text.py
depcalc/: context.py  experiments.py  factory.py  lazy.py  operators.py  pypireleases.py  pythonftp.py  pythonreleases.py  release.py  root.py  versiontoken.py
tests/: test_bounds.py  test_classifiers.py  test_contexts.py  test_factory.py  test_lazy.py  test_levels.py  test_operators.py  test_pypireleases.py  test_pythonreleases.py  test_release.py  test_releases.py  test_requirements.py  test_roots.py  test_time.py  test_versiontoken.py  test_versiontokens.py  test_virtualenv.py  utils.py
tests/io/: test_poetry.py  test_re.py  test_text.py
tests/scripts/: test_get_dist_metadata.py
