[tool.poetry]
name = "compreq"
version = "0.1.0"
description = "A library for dynamically computing Python requirements, to keep them up-to-date."
authors = ["Jesper Nielsen <jespernielsen1982+compreq@gmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/jesnie/compreq"
repository = "https://github.com/jesnie/compreq"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
beautifulsoup4 = "<5.0.0,>=4.11.0"
packaging = "<24.0,>=21.3"
pip = "<24.0.0,>=22.2.0"
python = "<4.0.0,>=3.10.0"
python-dateutil = "<3.0.0,>=2.8.0"
requests = "<3.0.0,>=2.28.0"

[tool.poetry.group.dev.dependencies]
black = "<23.10.0,>=23.7.0"
isort = "<5.13.0,>=5.12.0"
mypy = "<1.6.0,>=1.5.0"
pylint = "<2.18.0,>=2.17.0"
pytest = "<7.5.0,>=7.4.0"
taskipy = "<1.13.0,>=1.12.0"
tomlkit = "<0.13.0,>=0.12.0"
types-beautifulsoup4 = "<5.0.0.0,>=4.11.0"
types-python-dateutil = "<3.0.0.0,>=2.8.0"
types-requests = "<3.0.0.0,>=2.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 310
profile = "black"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
# First we turn on *all the checks*, and then we turn off those that are too annoying.
strict = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "_pytest.*",
    "exceptiongroup.*",
    "pytest.*",
]
ignore_missing_imports = true


[tool.pylint.messages_control]
max-line-length = 100
disable = [
  "duplicate-code",
  "fixme",
  "global-statement",
  "invalid-name",
  "invalid-str-returned",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-else-return",
  "no-member",
  "too-few-public-methods",
  "too-many-lines",
  "too-many-locals",
  "unhashable-member",
  "unused-argument",
]

[tool.taskipy.tasks]
isort = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX isort XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    isort compreq tests set_version.py requirements.py
"""
isort_check = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX isort XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    isort --check-only compreq tests set_version.py requirements.py
"""
black = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX black XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    black compreq tests set_version.py requirements.py
"""
black_check = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX black XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    black --check compreq tests set_version.py requirements.py
"""
mypy = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX mypy XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    mypy compreq tests set_version.py requirements.py
"""
pylint = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX pylint XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    pylint compreq tests set_version.py requirements.py
"""
pytest = """
    echo XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX pytest XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    pytest tests
"""

format = "task isort && task black"
format_check = "task isort_check && task black_check"
lint = "task format_check && task mypy && task pylint"
test = "task lint && task pytest"
format_and_test = "task format && task test"
